fix css for photo view on mobile

--- a/assets/css/album-view.css
+++ b/assets/css/album-view.css
@@ -87,4 +87,15 @@
     .container-photos img {
         width: 70px;
     }
+
+    .container-photos col {
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+    }
+
+    .container-photos col a {
+        justify-self: center;
+        align-self: center;
+        margin-bottom: 5px;
+    }
 }
