--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -3,6 +3,6 @@ html {
 }
 
 body {
-    background: linear-gradient(#2e343a,#1c1d1f);
+    background: #2a2f34;
     color: silver;
 }
